<resources>
    <string name="app_name">SDK-Test</string>
    <string name="button_page_view">Page View</string>
    <string name="button_add_cart">Add Cart</string>
    <string name="button_purchase">Purchase</string>
    <string name="button_product_page">Product Page</string>
    <string name="button_category_view">Category View</string>
    <string name="button_brand_view">Brand View</string>
    <string name="button_product_hover">Product Hover</string>
    <string name="button_custom">Custom</string>
    <string name="client_id">Client Id</string>
    <string name="button_set">Set</string>
    <string name="url">URL</string>
</resources>
